DW-1656] Fix overflow issue

--- a/src/nhsd/components/organisms/case-study/_index.scss
+++ b/src/nhsd/components/organisms/case-study/_index.scss
@@ -20,6 +20,10 @@ $-card-width: 33%;
 $-skeleton-height: 41.9%;
 
 #{$-root} {
+  display: block;
+  position: relative;
+  overflow-x: hidden;
+
   &__wrapper {
     display: flex;
     position: relative;
